# cs2_internal

./: CMakeLists.txt  build.ps1
includes/: sigscanner.h
includes/imgui/: imgui.h
libs/: sigscanner.lib
src/: dllmain.cpp
src/aimbot/: aimbot.cpp  aimbot.h
src/entities/: cbase_entity.cpp  cplayer_controller.cpp  cplayer_pawn.cpp  cweapon.cpp  entities.cpp  entities.h  entity.cpp
src/esp/: esp.cpp  esp.h
src/globals/: globals.cpp  globals.h
src/hooks/: hooks.cpp
src/hooks/present/: present.cpp  present.h
src/inventory/: inventory.cpp  inventory.h
src/math/: math.cpp  math.h
src/menu/: menu.cpp  menu.h
src/offsets/: offsets.h  skeletons.h
src/toggles/: toggles.cpp  toggles.h
src/utility/: utility.cpp  utility.h
